Feat: Footer & UI updates

--- a/pages/speaker/speaker.html
+++ b/pages/speaker/speaker.html
@@ -111,10 +111,7 @@
     <section class="speakers-container">
       <h2>Our Speakers</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
-        assumenda vitae nostrum corrupti ad consectetur enim, vel deleniti autem
-        reprehenderit neque aut at saepe molestias labore quam sed quas
-        similique.
+        Our conference brings together the brightest minds and thought leaders in blockchain , Web 3.0 and AI technologies. This year's lineup of speakers is truly exceptional, and we're thrilled to share their insights and perspectives with you.
       </p>
       <!-- Speaker List Container -->
       <!-- Dynamically updated by speaker.js -->
