--- a/pages/venue/venue.html
+++ b/pages/venue/venue.html
@@ -111,10 +111,10 @@
     <section class="venues-container">
       <h2>Venues</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis
-        assumenda vitae nostrum corrupti ad consectetur enim, vel deleniti autem
-        reprehenderit neque aut at saepe molestias labore quam sed quas
-        similique.
+        Planning a conference or event can be a challenge, but finding the right
+        venue doesn't have to be. Whether you're hosting a small business
+        meeting or a large-scale event, our selection of conference venues has
+        everything you need to make your event a success.
       </p>
       <!-- venue List Container -->
       <!-- Dynamically updated by venue.js -->
