--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             target="_blank"
             class="icon"
           >
-            <i class="fa fa-facebook"></i>
+            <i class="fa fa-github"></i>
           </a>
         </li>
 
@@ -130,11 +130,13 @@
 
     <!-- Count Section -->
     <section class="counts-container">
-      <p>300+ <span>Events/Conferences</span></p>
-      <div class="vertical-divider"></div>
-      <p>500+ <span>Speakers</span></p>
-      <div class="vertical-divider"></div>
-      <p>1000+ <span>Students & Professionals</span></p>
+      <div class="counts">
+        <p>300+ <span>Events/Conferences</span></p>
+        <div class="vertical-divider"></div>
+        <p>500+ <span>Speakers</span></p>
+        <div class="vertical-divider"></div>
+        <p>1000+ <span>Students & Professionals</span></p>
+      </div>
     </section>
 
     <!-- Popular Events Section -->
@@ -155,10 +157,9 @@
           <!-- Quote svg -->
           <img src="/assets/quote.svg" alt="" />
           <!-- Event Details -->
-          <h2>Event Name</h2>
+          <h2>Comic Conference</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            maxime libero, ex vitae tenetur
+            Celebrate all things comics, graphic novels, anime, and pop culture
           </p>
           <!-- Speaker details -->
           <div class="speaker">
@@ -167,8 +168,8 @@
               alt=""
             />
             <div class="speaker-text">
-              <h4>Herman Jensen</h4>
-              <p>Founder & Leader</p>
+              <h4>John Doe</h4>
+              <p>Associate Professor, Department of IT</p>
             </div>
           </div>
         </li>
@@ -177,20 +178,17 @@
           <!-- Quote svg -->
           <img src="/assets/quote.svg" alt="" />
           <!-- Event Details -->
-          <h2>Event Name</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            maxime libero, ex vitae tenetur
-          </p>
+          <h2>Dreamforce</h2>
+          <p>Annual customer and stakeholder conference of Salesforce</p>
           <!-- Speaker details -->
           <div class="speaker">
             <img
-              src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+              src="https://images.unsplash.com/photo-1570295999919-56ceb5ecca61?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDV8fHBlcnNvbnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=800&q=60"
               alt=""
             />
             <div class="speaker-text">
-              <h4>Herman Jensen</h4>
-              <p>Founder & Leader</p>
+              <h4>Jane Smith</h4>
+              <p>Assistant Professor, School of Medicine</p>
             </div>
           </div>
         </li>
@@ -199,24 +197,65 @@
           <!-- Quote svg -->
           <img src="/assets/quote.svg" alt="" />
           <!-- Event Details -->
-          <h2>Event Name</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            maxime libero, ex vitae tenetur
-          </p>
+          <h2>Adobe MAX</h2>
+          <p>Annual conference for creatives by Adobe</p>
           <!-- Speaker details -->
           <div class="speaker">
-            <img
-              src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
-              alt=""
-            />
+            <img src="./assets/speaker/home-speaker-3.jpg" alt="" />
             <div class="speaker-text">
-              <h4>Herman Jensen</h4>
-              <p>Founder & Leader</p>
+              <h4>Stephanie Liverani</h4>
+              <p>Assistant Professor of Mathematics</p>
             </div>
           </div>
         </li>
       </ul>
     </section>
+
+    <!-- footer -->
+    <footer class="footer-container">
+      <!-- logo -->
+      <div class="footer-logo">
+        <img src="/assets/logo.svg" alt="" />
+        <h1>Events<span>HIVE</span></h1>
+      </div>
+      <!-- Copyrights -->
+      <div class="copyRights">
+        © 2023 <a href="https://deepakwings.netlify.app">Deepak V</a> . All
+        Rights Reserved
+      </div>
+      <!-- Contact Links -->
+      <ul class="contact-links-container">
+        <p>Contact Us</p>
+        <li class="singleIcon">
+          <a
+            href="https://github.com/Iam-DeepakVel"
+            target="_blank"
+            class="icon"
+          >
+            <i class="fa fa-github"></i>
+          </a>
+        </li>
+
+        <li class="singleIcon">
+          <a
+            href="https://twitter.com/Iam_DeepakVel"
+            target="_blank"
+            class="icon"
+          >
+            <i class="fa fa-twitter"></i>
+          </a>
+        </li>
+
+        <li class="singleIcon">
+          <a
+            href="https://www.linkedin.com/in/iamdeepakvel"
+            target="_blank"
+            class="icon"
+          >
+            <i class="fa fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
