Added: Table UI for Schedules

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           "Step Out of Your Comfort Zone and Embrace Endless Opportunities.
           Register for the Events Now!"
         </p>
-        <a href="#" class="hero-button">View Events</a>
+        <a href="./pages/schedule/schedule.html" class="hero-button">View Events</a>
       </div>
       <!-- Image section -->
       <div class="hero-image">
