--- a/pages/schedule/schedule.html
+++ b/pages/schedule/schedule.html
@@ -115,11 +115,128 @@
           Stay up to date with the latest events and developments in your
           industry by attending one of the conferences listed below.
         </p>
-  
       </div>
 
       <!-- Events list container -->
       <ul id="conference-list"></ul>
+
+      <!-- Table - UI for Events list -->
+      <!-- <table cellpadding="0" cellspacing="0" border="0">
+        <thead>
+          <tr>
+            <th>Event Name</th>
+            <th>Speaker</th>
+            <th>Venue</th>
+            <th>Date</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+      </table>
+    </div>
+    <div class="tbl-content">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <tbody>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+          <tr>
+            <td>Web Dev Conference</td>
+            <td>Kishore Kumar</td>
+            <td>Delhi</td>
+            <td>12/24/2002</td>
+            <td>10:30 AM</td>
+          </tr>
+        </tbody>
+      </table>
+    </div> -->
     </section>
 
     <script type="module" src="/js/schedule.js"></script>
